# my_cloud_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
README/: architecture.md  deploy.md  main.md  runserver_local.md
src/: example.env
src/apps/administration/: models.py  serializers.py  urls.py  validators.py  views.py
src/apps/administration/migrations/: 0001_initial.py  0002_user_full_name.py  0003_user_uuid.py
src/apps/cloud/: fields.py  models.py  serializers.py  urls.py  views.py
src/apps/cloud/migrations/: 0001_initial.py  0002_file_type.py  0003_alter_file_options.py
src/config/: settings.py  urls.py
src/config/modules/: authorization.py  cors.py  databases.py  installed_apps.py  logging.py  rest_framework.py  spectacular.py
